// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders List/demo/action-layout.md correctly 1`] = `
<div
  class="arco-list-wrapper"
  style="max-width:830px"
>
  <div
    class="arco-list arco-list-default arco-list-no-border list-demo-action-layout"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-list-item"
        role="listitem"
        style="padding:20px 0;border-bottom:1px solid var(--color-fill-3)"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-image"
                >
                  <img
                    alt="avatar"
                    src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a8c8cdb109cb051163646151a4a5083b.png~tplv-uwbnlip3yd-webp.webp"
                  />
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Socrates
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China. ByteDance has products such as TikTok, Toutiao, volcano video and Douyin (the Chinese version of TikTok).
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-heart"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M38.083 12.912a9.929 9.929 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.929 9.929 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z"
                  />
                </svg>
                83
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-star"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z"
                  />
                </svg>
                0
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-message"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
                  />
                </svg>
                Reply
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item-extra-content"
        >
          <div
            class="image-area"
          >
            <img
              alt="arcodesign"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/29c1f9d7d17c503c5d7bf4e538cb7c4f.png~tplv-uwbnlip3yd-webp.webp"
            />
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
        style="padding:20px 0;border-bottom:1px solid var(--color-fill-3)"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-image"
                >
                  <img
                    alt="avatar"
                    src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/e278888093bef8910e829486fb45dd69.png~tplv-uwbnlip3yd-webp.webp"
                  />
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Balzac
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China. ByteDance has products such as TikTok, Toutiao, volcano video and Douyin (the Chinese version of TikTok).
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-heart"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M38.083 12.912a9.929 9.929 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.929 9.929 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z"
                  />
                </svg>
                83
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-star"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z"
                  />
                </svg>
                1
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-message"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
                  />
                </svg>
                Reply
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item-extra-content"
        >
          <div
            class="image-area"
          >
            <img
              alt="arcodesign"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/04d7bc31dd67dcdf380bc3f6aa07599f.png~tplv-uwbnlip3yd-webp.webp"
            />
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
        style="padding:20px 0;border-bottom:1px solid var(--color-fill-3)"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-image"
                >
                  <img
                    alt="avatar"
                    src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/9eeb1800d9b78349b24682c3518ac4a3.png~tplv-uwbnlip3yd-webp.webp"
                  />
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Plato
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China. ByteDance has products such as TikTok, Toutiao, volcano video and Douyin (the Chinese version of TikTok).
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-heart"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M38.083 12.912a9.929 9.929 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.929 9.929 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z"
                  />
                </svg>
                83
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-star"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z"
                  />
                </svg>
                2
              </span>
            </li>
            <li>
              <span>
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-message"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z"
                  />
                </svg>
                Reply
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item-extra-content"
        >
          <div
            class="image-area"
          >
            <img
              alt="arcodesign"
              src="//p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/1f61854a849a076318ed527c8fca1bbf.png~tplv-uwbnlip3yd-webp.webp"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-pagination arco-pagination-size-default arco-list-pagination"
  >
    <ul
      class="arco-pagination-list"
    >
      <li
        aria-label="上一页"
        class="arco-pagination-item arco-pagination-item-prev arco-pagination-item-disabled"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-left"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M32 8.4 16.444 23.956 32 39.513"
          />
        </svg>
      </li>
      <li
        aria-current="true"
        aria-label="第 1 页"
        class="arco-pagination-item arco-pagination-item-active"
      >
        1
      </li>
      <li
        aria-label="第 2 页"
        class="arco-pagination-item"
      >
        2
      </li>
      <li
        aria-label="第 3 页"
        class="arco-pagination-item"
      >
        3
      </li>
      <li
        aria-label="第 4 页"
        class="arco-pagination-item"
      >
        4
      </li>
      <li
        aria-label="第 5 页"
        class="arco-pagination-item"
      >
        5
      </li>
      <li
        aria-label="下一页"
        class="arco-pagination-item arco-pagination-item-next"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-right"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="m16 39.513 15.556-15.557L16 8.4"
          />
        </svg>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders List/demo/actions.md correctly 1`] = `
Array [
  <div
    class="arco-list-wrapper"
  >
    <div
      class="arco-list arco-list-default list-demo-actions"
      style="width:700px;margin-bottom:48px"
    >
      <div
        class="arco-list-content"
        role="list"
      >
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-edit"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"
                  />
                </svg>
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-delete"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"
                  />
                </svg>
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-edit"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"
                  />
                </svg>
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-delete"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"
                  />
                </svg>
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-edit"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"
                  />
                </svg>
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-delete"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"
                  />
                </svg>
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-edit"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="m30.48 19.038 5.733-5.734a1 1 0 0 0 0-1.414l-5.586-5.586a1 1 0 0 0-1.414 0l-5.734 5.734m7 7L15.763 33.754a1 1 0 0 1-.59.286l-6.048.708a1 1 0 0 1-1.113-1.069l.477-6.31a1 1 0 0 1 .29-.631l14.7-14.7m7 7-7-7M6 42h36"
                  />
                </svg>
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-delete"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M5 11h5.5m0 0v29a1 1 0 0 0 1 1h25a1 1 0 0 0 1-1V11m-27 0H16m21.5 0H43m-5.5 0H32m-16 0V7h16v4m-16 0h16M20 18v15m8-15v15"
                  />
                </svg>
              </span>
            </li>
          </div>
        </div>
      </div>
      <div
        class="arco-list-footer"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;cursor:pointer"
        >
          <span
            class="list-demo-actions-button"
          >
            More 
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              style="margin-left:8px"
              viewBox="0 0 48 48"
            >
              <path
                d="M39.6 17.443 24.043 33 8.487 17.443"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="arco-list-wrapper"
  >
    <div
      class="arco-list arco-list-default list-demo-actions"
      style="width:700px"
    >
      <div
        class="arco-list-content"
        role="list"
      >
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-button"
              >
                Edit
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-button"
              >
                Delete
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-button"
              >
                Edit
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-button"
              >
                Delete
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-button"
              >
                Edit
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-button"
              >
                Delete
              </span>
            </li>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-meta"
            >
              <div
                class="arco-list-item-meta-avatar"
              >
                <div
                  class="arco-avatar arco-avatar-square"
                  style="font-size:"
                >
                  <span
                    class="arco-avatar-text"
                  >
                    A
                  </span>
                </div>
              </div>
              <div
                class="arco-list-item-meta-content"
              >
                <div
                  class="arco-list-item-meta-title"
                >
                  Beijing Bytedance Technology Co., Ltd.
                </div>
                <div
                  class="arco-list-item-meta-description"
                >
                  Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                </div>
              </div>
            </div>
          </div>
          <div
            class="arco-list-item-action"
          >
            <li>
              <span
                class="list-demo-actions-button"
              >
                Edit
              </span>
            </li>
            <li>
              <span
                class="list-demo-actions-button"
              >
                Delete
              </span>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders List/demo/basic.md correctly 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-small"
    style="width:622px"
  >
    <div
      class="arco-list-header"
    >
      List title
    </div>
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-content"
          >
            Beijing Bytedance Technology Co., Ltd.
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-content"
          >
            Bytedance Technology Co., Ltd.
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-content"
          >
            Beijing Toutiao Technology Co., Ltd.
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-content"
          >
            Beijing Volcengine Technology Co., Ltd.
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-content"
          >
            China Beijing Bytedance Technology Co., Ltd.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders List/demo/grid.md correctly 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default arco-list-no-border"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-row arco-row-align-start arco-row-justify-start arco-list-row"
      >
        <div
          class="arco-col arco-col-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-small"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Platform
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            iOS
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Android
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Web
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-small"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Framework
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Angular
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Vue
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            React
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-small"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Language
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            C++
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            JavaScript
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Python
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-small"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Component
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Button
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Breadcrumb
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Transfer
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders List/demo/meta.md correctly 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default"
    style="width:600px"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-text"
                >
                  A
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Beijing Bytedance Technology Co., Ltd.
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-text"
                >
                  A
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Beijing Bytedance Technology Co., Ltd.
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-text"
                >
                  A
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Beijing Bytedance Technology Co., Ltd.
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-list-item"
        role="listitem"
      >
        <div
          class="arco-list-item-main"
        >
          <div
            class="arco-list-item-meta"
          >
            <div
              class="arco-list-item-meta-avatar"
            >
              <div
                class="arco-avatar arco-avatar-square"
                style="font-size:"
              >
                <span
                  class="arco-avatar-text"
                >
                  A
                </span>
              </div>
            </div>
            <div
              class="arco-list-item-meta-content"
            >
              <div
                class="arco-list-item-meta-title"
              >
                Beijing Bytedance Technology Co., Ltd.
              </div>
              <div
                class="arco-list-item-meta-description"
              >
                Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders List/demo/responsive-grid.md correctly 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default arco-list-no-border"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-row arco-row-align-start arco-row-justify-start arco-list-row"
      >
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Platform
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            iOS
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Android
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Web
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Framework
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Angular
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Vue
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            React
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Language
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            C++
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            JavaScript
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Python
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Component
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Button
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Breadcrumb
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Transfer
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Design
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Figma
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Sketch
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Adobe XD
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Plugin
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Edu Tools
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            BashSupport
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            GitToolBox
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Platform
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            iOS
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Android
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Web
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Framework
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Angular
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Vue
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            React
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-col arco-col-sm-24 arco-col-md-12 arco-col-lg-8 arco-col-xl-6 arco-list-row-col"
        >
          <div
            class="arco-list-item"
            role="listitem"
          >
            <div
              class="arco-list-item-main"
            >
              <div
                class="arco-list-item-content"
              >
                <div
                  class="arco-list-wrapper"
                >
                  <div
                    class="arco-list arco-list-default"
                  >
                    <div
                      class="arco-list-header"
                    >
                      Language
                    </div>
                    <div
                      class="arco-list-content"
                      role="list"
                    >
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            C++
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            JavaScript
                          </div>
                        </div>
                      </div>
                      <div
                        class="arco-list-item"
                        role="listitem"
                      >
                        <div
                          class="arco-list-item-main"
                        >
                          <div
                            class="arco-list-item-content"
                          >
                            Python
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders List/demo/scrollLoad.md correctly 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default"
    style="width:600px;max-height:320px"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-list-item arco-list-scroll-loading"
      >
        <div
          class="arco-spin arco-spin-loading"
        >
          <span
            class="arco-spin-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-loading"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders List/demo/size.md correctly 1`] = `
Array [
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    style="margin-bottom:20px;border-radius:4px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="size"
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
  </div>,
  <div
    class="arco-list-wrapper"
  >
    <div
      class="arco-list arco-list-default"
      style="width:622px"
    >
      <div
        class="arco-list-header"
      >
        List title
      </div>
      <div
        class="arco-list-content"
        role="list"
      >
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-content"
            >
              Beijing Bytedance Technology Co., Ltd.
            </div>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-content"
            >
              Bytedance Technology Co., Ltd.
            </div>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-content"
            >
              Beijing Toutiao Technology Co., Ltd.
            </div>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-content"
            >
              Beijing Volcengine Technology Co., Ltd.
            </div>
          </div>
        </div>
        <div
          class="arco-list-item"
          role="listitem"
        >
          <div
            class="arco-list-item-main"
          >
            <div
              class="arco-list-item-content"
            >
              China Beijing Bytedance Technology Co., Ltd.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders List/demo/virtual-list.md correctly 1`] = `
Array [
  <h3
    style="color:var(--color-text-2)"
  >
    10000 items
  </h3>,
  <div
    class="arco-list-wrapper"
  >
    <div
      class="arco-list arco-list-default"
      style="width:600px"
    >
      <div
        class="arco-list-content arco-list-virtual"
        role="list"
        style="overflow-y:auto;overflow-anchor:none;max-height:560px"
      >
        <div
          style="height:320000px;position:relative;overflow:hidden;z-index:0"
        >
          <div
            style="display:flex;flex-direction:column;transform:translateY(0px);position:absolute;left:0;right:0;top:0"
          >
            <div
              class="arco-list-item"
              role="listitem"
            >
              <div
                class="arco-list-item-main"
              >
                <div
                  class="arco-list-item-meta"
                >
                  <div
                    class="arco-list-item-meta-avatar"
                  >
                    <div
                      class="arco-avatar arco-avatar-square"
                      style="font-size:"
                    >
                      <span
                        class="arco-avatar-text"
                      >
                        A
                      </span>
                    </div>
                  </div>
                  <div
                    class="arco-list-item-meta-content"
                  >
                    <div
                      class="arco-list-item-meta-title"
                    >
                      Beijing Bytedance Technology Co., Ltd.
                    </div>
                    <div
                      class="arco-list-item-meta-description"
                    >
                      (00000) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
